CSS styling error on small devices fix

--- a/public/stylesheets/uni_info_view.css
+++ b/public/stylesheets/uni_info_view.css
@@ -140,9 +140,10 @@ span {
 	background-color: #3a3630;
 	border-right: 1px solid black;
 }
-/* .stat-div-container {
+
+.stat-div-container {
 width: 100%;
-} */
+}
 
 /* .stat-line-filler {
 	padding: 0px;
